# task_model

./: .gitignore  init_git.py  pyproject.toml  setup.py
src/task_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/task_model/core/: __init__.py  base_task.py  composite_task.py  parameter.py  task_result.py
tests/: test_task_model.py  test_task_model_extend.py
